objects/File_Archive__c.object
<CustomObject>
    <fields>
        <fullName>Audit_Deviation__c</fullName>
        <label>Audit Deviation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Audit</fullName>
                </value>
                <value>
                    <fullName>Code Signing Audit</fullName>
                </value>
                <value>
                    <fullName>BR Audit</fullName>
                </value>
                <value>
                    <fullName>EV SSL Audit</fullName>
                </value>
                <value>
                    <fullName>EV Code Signing Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Statement_Date__c</fullName>
        <label>Audit Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auditor_Location__c</fullName>
        <label>Auditor Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <label>Auditor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CA Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>File Archive</relationshipLabel>
        <relationshipName>File_Archive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Audit</fullName>
                </value>
                <value>
                    <fullName>Code Signing Audit</fullName>
                </value>
                <value>
                    <fullName>BR Audit</fullName>
                </value>
                <value>
                    <fullName>EV SSL Audit</fullName>
                </value>
                <value>
                    <fullName>EV Code Signing Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Link__c</fullName>
        <label>External Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Link__c</fullName>
        <label>Internal Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <label>File Archive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A{00000}</displayFormat>
        <label>Archive ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Archive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>